# dars

./: .env.example  .gitignore  .railwayignore  AGENT_CHECKLIST.md  AGENT_ROADMAP.md  ALIGNMENT_VERIFICATION_SUMMARY.txt  API_ARCHITECTURE.md  BILINGUAL_CONTENT_COVERAGE.md  BUSINESS_VALUE_ANALYSIS.md  CLAUDE.md  DATABASE_SCHEMA.md  DELIVERY_REPORT_DATABASE.md  DEPENDENCY_ANALYSIS.md  ENDPOINT_INVENTORY.md  IMPLEMENTATION_SUMMARY.md  INTERFACE_ALIGNMENT_ANALYSIS.md  PHASE1_TASKS.md  PHASE3_TASKS.md  PHASE4_TASKS.md  PHASE5_TASKS.md  PHASE6_TASKS.md  PHASE7_TASKS.md  PRICING_AND_ROI.md  PROJECT_PROGRESS.md  PROJECT_STATUS.md  QUICKSTART_DATABASE.md  REQUIREMENTS.md  ROADMAP_SUMMARY.md  SECURITY_AND_LOGGING_SUMMARY.md  SECURITY_ROADMAP_INTEGRATION.md  TESTING.md  VALIDATION_PIPELINE.md  alembic.ini  debug_app.py  pyproject.toml  pytest.ini  railway.toml  start.sh  test.db  verify_database.py
.claude/commands/: code-review.md  jahanara.md  jodha.md  maryam.md  noor.md  security-audit.md
.github/workflows/: validation.yml
alembic/: env.py
alembic/versions/: 47eebe03a353_initial_schema_with_all_models.py  4822235d35e4_add_message_templates_for_bilingual_.py  a1b2c3d4e5f6_add_answer_type_columns_to_problems.py  b1c2d3e4f5a6_add_difficulty_level_to_students.py  c1d2e3f4a5b6_add_sent_messages_table.py
docs/: security_review_b1_algorithm.md
openspec/agents/: code-reviewer.md  jahanara.md  jodha.md  maryam.md  noor.md  security-auditor.md
scripts/: git-hook-pre-commit.sh  install-git-hooks.sh  seed_problems.py  setup-hooks.sh  validate.sh
src/: __init__.py  config.py  database.py  logging.py  main.py  scheduler.py
src/auth/: __init__.py  admin.py  session.py  student.py  telegram.py
src/errors/: __init__.py  exceptions.py  handlers.py
src/logging/: __init__.py  config.py
src/models/: __init__.py  base.py  cost_record.py  message_template.py  problem.py  response.py  sent_message.py  session.py  streak.py  student.py
src/repositories/: __init__.py  problem_repository.py  response_repository.py  session_repository.py  streak_repository.py  student_repository.py
src/routes/: __init__.py  admin.py  health.py  practice.py  streak.py  student.py  webhook.py
src/schemas/: admin.py  common.py  practice.py  streak.py  student.py  telegram.py
src/services/: __init__.py  adaptive_difficulty.py  answer_evaluator.py  cost_tracker.py  encouragement.py  hint_cache.py  hint_generator.py  hint_state.py  messages.py  problem_selector.py  student_service.py  telegram_client.py
src/utils/: __init__.py  pii.py
static/admin/: index.html
tasks/: PHASE3_TASK_MAPPING.md  README.md  TASK_MAPPING.md  backend.md  content.md  frontend.md  infrastructure.md
tasks/phase1/: README.md  api.md  database.md  security.md
tasks/scripts/: task-utils.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_adaptive_difficulty_flow.py  test_admin_endpoints.py  test_auth_database.py  test_hint_generator_flow.py  test_language_switch.py  test_practice_flow.py  test_reminder_flow.py  test_streak_flow.py  test_streak_ux.py  test_telegram_flow.py  test_telegram_practice_flow.py
tests/unit/: __init__.py  test_adaptive_difficulty.py  test_answer_evaluator.py  test_auth.py  test_cost_tracker.py  test_encouragement.py  test_endpoints.py  test_errors.py  test_example.py  test_hint_cache.py  test_hint_generator.py  test_models.py  test_practice_logging.py  test_problem_repository.py  test_problem_selector.py  test_response_repository.py  test_scheduler.py  (+6 more)
(+25 files in other folders)
